name:     P1
version:  0.1
author:   JP2

library
  hs-source-dirs:  src
  ghc-options:     -O1 -fglasgow-exts
  extensions:      OverlappingInstances

executable P1
  hs-source-dirs:  src
  main-is:         Main.hs
  ghc-options:     -O1 -fglasgow-exts
  extensions:      OverlappingInstances
  build-depends:   array
 
executable P2
  hs-source-dirs:  src
  main-is:         Main2.hs

